# tor_bgp_sims

./: MANIFEST.in  README.md  RelayInfoCollector.py  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
scripts/: bandwidth_check.py  clients_to_guard_exit_to_dest_scenario.py  combined_as_graph_analyzer.py  custom_graphs.py  entropy_analysis.py  penalty_matrix.py
tor_bgp_sims/: __main__.py  policies.py  relay_info_collector.py  tor_relay.py  tor_relay_collector.py  utils.py
tor_bgp_sims/old/: tor_graph_factory.py
tor_bgp_sims/old/scenarios/: __init__.py  client_to_guard_scenario.py  exit_to_dest_scenario.py
tor_bgp_sims/scenarios/: __init__.py  client_to_guard_scenario.py  clients_to_guard_scenario.py  exit_to_dest_scenario.py  preprocess_anns_func.py  preprocess_anns_funcs.py  tor_scenario.py  us_client_to_guard_scenario.py
tor_bgp_sims/tests/: conftest.py
tor_bgp_sims/tests/engine_tests/: test_engine.py
tor_bgp_sims/tests/engine_tests/engine_test_configs/: __init__.py
tor_bgp_sims/tor_relay_collector/: __init__.py  tor_relay.py  tor_relay_collector.py  utils.py
